--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,9 @@ html, body {
   margin: 0;
   padding: 0;
   background-color: black;
-  overflow: hidden;
   color: lightgrey;
   height: 100%;
+  touch-action: none;
 }
 
 * {
@@ -45,7 +45,6 @@ html, body {
   width: 95%;
   padding: 5px;
   text-align: center;
-  overflow-y: auto;
 }
 
 button, select, input {
